<resources>
    <string name="app_name">Helping Doctors</string>
    <string name="agora_app_id">YOUR_APP_ID</string>
    <string name="login">Login</string>
    <string name="mobileNum">Mobile Number</string>
    <string name="no_acc">Don\'t have an account?</string>
    <string name="reg_here">Register</string>
    <string name="name_reg">Name*</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile_reg">Mobile Number*</string>
    <string name="dob_reg">Date of Birth*</string>
    <string name="dob">Date of Birth</string>
    <string name="acc">Have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="sign_up">Register</string>
    <string name="cancel">Cancel</string>
    <string name="registration">Registration</string>
    <string name="reg_success">You have registered successfully. Please login.</string>
    <string name="otp_tick_text">Click to resend in %s seconds</string>
    <string name="otp_tick_over_text">Timer has expired before verification, please regenerate OTP.</string>
    <string name="otp_input_resend">Click to resend OTP</string>
    <string name="otp_input_placeholder">XXXX</string>
    <string name="otp_input_msg">A Verification code has been sent to your registered mobile number</string>
    <string name="otp_input_2">Please enter it below</string>
    <string name="otp_input_3">Did not get the code?</string>
    <string name="otp_verification_succ">OTP verification success</string>
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="enter_all_fields">Please enter all required fields</string>
    <string name="generic_error">Something went wrong, please try again later.</string>
    <string name="err_creating_auth">There was an error while authenticating</string>
    <string name="no_otp">Sorry, could not send OTP your mobile number</string>
    <string name="date_err">Please enter a valid date of birth</string>
    <string name="email_err">Please enter a valid Email ID</string>
    <string name="msisdn_err">Please enter a valid 10 digit number</string>
    <string name="login_err">Sorry, an error occurred when trying to log you in</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="your_profile">Your Profile</string>
    <string name="profile">Profile</string>
    <string name="your_history">Your History</string>
    <string name="med_history">Medical History</string>
    <string name="tell_people">Tell People!</string>
    <string name="share">Share App</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="who_is_patient">Please tell us who is the patient</string>
    <string name="self">Self</string>
    <string name="others">Others</string>
    <string name="age">Please tell us the age</string>
    <string name="age_hint">Age*</string>
    <string name="need_age">Please enter an age</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="no_change_prof">You haven\'t done any changes</string>
    <string name="prof_edited">Profile Edited</string>
    <string name="prof_edited_msg">You have made changes to you profile. Do you want to save the changes?</string>
    <string name="before_available">Available from</string>
    <string name="to">to</string>
    <string name="after_available">Currently Available!</string>
    <string name="email_update_succ">Email updated successfully</string>
    <string name="prof_update_succ">Profile updated successfully. Please login again with new number to continue.
    </string>
    <string name="num_edited">Once you change your mobile number, you will have to login again. Do you want to
        continue?
    </string>
    <string name="doctors">Doctors</string>
    <string name="permission_req">Please grant all the required permissions</string>
    <string name="mute_call">You have muted the call</string>
    <string name="user_offline">User is offline</string>
    <string name="agora_login_fail">Login Failed as the network is not available</string>
    <string name="agora_login_other">You are logged in on another device</string>
    <string name="new_user">New User?</string>
    <string name="num_no_exist">Your number doesn\'t exist. Do you want to register?</string>
</resources>
