<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/root_layout_registration"
        tools:context=".activity.Registration">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0">

        <include layout="@layout/toolbar_layout"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout3"
            android:id="@+id/scrollView2">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingBottom="24dp">

            <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="2.0"
                    app:lottie_autoPlay="true"
                    app:lottie_colorFilter="@color/colorPrimary"
                    app:lottie_fileName="profile.json"
                    app:lottie_loop="true"
                    android:layout_gravity="center_horizontal"/>

            <!-- Name Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_name"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textPersonName"
                          android:drawableStart="@drawable/name"
                          android:drawablePadding="10dp"
                          android:textColor="@color/colorBlack"
                          android:hint="@string/name_reg"/>
            </android.support.design.widget.TextInputLayout>

            <!--  Email Label -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_email"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="textEmailAddress"
                          android:drawableStart="@drawable/email"
                          android:drawablePadding="10dp"
                          android:textColor="@color/colorBlack"
                          android:hint="@string/email"/>
            </android.support.design.widget.TextInputLayout>


            <!-- mobile number -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_mobile"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="number"
                          android:maxLength="10"
                          android:drawableStart="@drawable/mobile"
                          android:drawablePadding="10dp"
                          android:textColor="@color/colorBlack"
                          android:hint="@string/mobile_reg"/>
            </android.support.design.widget.TextInputLayout>

            <!-- DOB -->
            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_dob"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:inputType="number"
                          android:focusable="false"
                          android:clickable="true"
                          android:drawableStart="@drawable/cake"
                          android:drawablePadding="10dp"
                          android:textColor="@color/colorBlack"
                          android:hint="@string/dob_reg"/>
            </android.support.design.widget.TextInputLayout>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/gender_group">

                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:layout_marginEnd="8dp"
                        android:id="@+id/male"/>
                <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/female"/>
            </RadioGroup>


            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:padding="12dp"
                    android:text="@string/sign_up"
                    android:background="@drawable/button_background"
                    android:textColor="@color/colorWhite"
                    android:onClick="register"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/cardView"
                    app:layout_constraintStart_toStartOf="@+id/cardView"
                    app:layout_constraintEnd_toEndOf="@+id/cardView">

                <TextView
                        android:id="@+id/loginLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="1dp"
                        android:textColor="@color/colorBlack"
                        android:text="@string/acc"/>

                <TextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="1dp"
                        android:textColor="@color/colorPrimaryDark"
                        android:text="@string/login"/>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerProgressBar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/scrollView2"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/scrollView2"
            app:layout_constraintEnd_toEndOf="@+id/scrollView2"
            android:layout_marginEnd="8dp"
            android:visibility="gone"/>

</android.support.constraint.ConstraintLayout>