<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:showIn="@layout/app_bar_home_screen"
        tools:context=".activity.HomeScreen">

    <Button
            android:text="@string/self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/selfButton"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="@+id/othersButton"
            app:layout_constraintBottom_toBottomOf="@+id/othersButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorWhite"
            app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/others"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/othersButton"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_secondary"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toEndOf="@+id/selfButton"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.954"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/patientLabel"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/othersButton"
            app:layout_constraintStart_toStartOf="@+id/selfButton"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/othersButton"
            android:id="@+id/linearLayout">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:text="@string/age"
                android:id="@+id/age_tv"
                android:layout_margin="8dp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/age_hint"
                    android:textColor="@color/colorBlack"
                    android:id="@+id/age_et"
                    android:layout_margin="8dp"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"

            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="@+id/othersButton"
            app:layout_constraintStart_toStartOf="@+id/selfButton"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp">
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/homeRecyclerView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
            android:text="@string/who_is_patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/patientLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="72dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/homeProgressBar"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            tools:visibility="gone"/>
</android.support.constraint.ConstraintLayout>